samples/_failures_safe/1761316999_1eb7fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f6f561d.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_4f6f561d.c:127:5: error: expected declaration or statement at end of input
  127 |     for (int x = 0; x < n; x++) {
      |     ^~~
./samples/SAFE/__tmp_4f6f561d.c:127:5: error: expected declaration or statement at end of input
